<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.gridimagesearch.activities.FilterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/filter_title"
        android:id="@+id/tvTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size"
        android:id="@+id/tvImageSize"
        android:textSize="25sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_filter"
        android:id="@+id/tvColorFilter"
        android:textSize="25sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type"
        android:id="@+id/tvImageType"
        android:textSize="25sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="17dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_filter"
        android:id="@+id/tvSiteFilter"
        android:textSize="25sp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvImageType"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="17dp" />

    <Spinner
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/size_spinner"
        android:spinnerMode="dropdown"
        android:layout_alignBottom="@+id/tvImageSize"
        android:layout_toRightOf="@+id/tvImageSize"
        android:layout_alignTop="@+id/tvImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/color_spinner"
        android:spinnerMode="dropdown"
        android:layout_alignBottom="@+id/tvColorFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/size_spinner"
        android:layout_alignTop="@+id/tvColorFilter"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type_spinner"
        android:spinnerMode="dropdown"
        android:layout_alignBottom="@+id/tvImageType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tvImageType"
        android:layout_alignLeft="@+id/color_spinner"
        android:layout_alignStart="@+id/color_spinner" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSite"
        android:layout_alignBottom="@+id/tvSiteFilter"
        android:layout_alignRight="@+id/type_spinner"
        android:layout_alignEnd="@+id/type_spinner"
        android:layout_toRightOf="@+id/tvImageType"
        android:layout_toEndOf="@+id/tvImageType"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/btnSave"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/etSite"
        android:layout_centerHorizontal="true"
        android:onClick="buttonSave"/>

</RelativeLayout>
